--- a/src/main/resources/docs/1.Obiettivi_del_documento.adoc
+++ b/src/main/resources/docs/1.Obiettivi_del_documento.adoc
@@ -1,5 +1,5 @@
-== Obiettivi del documento (((1. Obiettivi del documento)))
-
+== Obiettivi del documento
+(((1. Obiettivi del documento)))
 
 Il presente documento ha lo scopo di tracciare e descrivere le specifiche funzionali del sistema NoTI-ER nei seguenti ambiti:
 
